--- a/app/src/main/res/layout/folders.xml
+++ b/app/src/main/res/layout/folders.xml
@@ -17,16 +17,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:background="#7ec0ee"
+    tools:context=".Folders">
 
-  <TextView
-      android:id="@+id/app_name"
-      android:text="@string/app_name"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"/>
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/folders"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
 </RelativeLayout>
